# LLM-Engine

./: pyproject.toml
docs/: implementation-plan.md  qwen3-architecture.md  qwen3-hf-comparison-fixes.md
llm_engine/: __init__.py  config.py
llm_engine/data_structures/: __init__.py  block.py  sequence.py
llm_engine/engine/: __init__.py  output.py
llm_engine/memory/: __init__.py  block_manager.py  kv_cache.py
llm_engine/model/: __init__.py  attention.py  attention_metadata.py  executor.py  layers.py  loader.py  qwen3.py  rope.py
llm_engine/sampling/: __init__.py  sampler.py
llm_engine/scheduler/: __init__.py
llm_engine/utils/: __init__.py
scripts/: compare_models.py  test_kv_cache.py  test_unified_prefill.py
tests/: __init__.py  conftest.py  test_attention.py  test_block.py  test_config.py  test_layers.py  test_output.py  test_qwen3.py  test_rope.py  test_sampler.py  test_sequence.py
